# LoggerCpp

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  Logger.Doxyfile  README.md  TODO.txt  build.bat  build.sh  cpplint.py  index.html  log.old.txt  logger.sln  logger.vcproj  params.json
examples/: Main.cpp
examples/msvc/: Example.vs2008.sln  Example.vs2008.vcproj  Example.vs2010.sln  Example.vs2010.vcxproj  Example.vs2010.vcxproj.filters  Logger.vs2008.sln  Logger.vs2008.vcproj  Logger.vs2010.sln  Logger.vs2010.vcxproj  LoggerCpp.vs2008.sln  LoggerCpp.vs2008.vcproj  LoggerCpp.vs2010.sln  LoggerCpp.vs2010.vcxproj  LoggerCpp.vs2010.vcxproj.filters  log.old.txt
include/LoggerCpp/: Channel.h  Config.h  DateTime.h  Exception.h  Formatter.h  Log.h  Logger.h  LoggerCpp.h  Manager.h  Output.h  OutputConsole.h  OutputDebug.h  OutputFile.h  OutputSyslog.h  Time.h  Utils.h  shared_ptr.hpp
msvc/: LoggerCpp.vcxproj  LoggerCpp.vcxproj.filters
src/: Channel.cpp  Channel.h  Config.cpp  Config.h  DateTime.cpp  Exception.h  Formatter.h  Log.cpp  Log.h  Logger.cpp  Logger.h  LoggerCpp.h  Main.cpp  Manager.cpp  Manager.h  Output.h  OutputConsole.cpp  OutputConsole.h  OutputDebug.cpp  OutputDebug.h  OutputFile.cpp  OutputFile.h  OutputSyslog.cpp  Stream.h  Time.cpp  Time.h  shared_ptr.hpp
